# niagara

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  etcpak.sh
.github/workflows/: build.yml
src/: CMakeLists.txt  apple.mm  common.h  config.h  device.cpp  device.h  extern.cpp  fast_obj.cpp  fileutils.cpp  fileutils.h  imgui_utils.cpp  imgui_utils.h  math.h  niagara.cpp  niagara.sln  niagara.vcxproj  niagara.vcxproj.filters  resources.cpp  resources.h  scene.cpp  scene.h  scenecache.cpp  scenert.cpp  scenert.h  shaders.cpp  shaders.h  swapchain.cpp  swapchain.h  textures.cpp  textures.h
src/shaders/: blit.comp.glsl  bloom.comp.glsl  cluster.mesh.glsl  clustercull.comp.glsl  clustersubmit.comp.glsl  debugtext.comp.glsl  depthreduce.comp.glsl  drawcmd.comp.glsl  drawcull.comp.glsl  drawcullearly.comp.glsl  drawculllate.comp.glsl  final.comp.glsl  math.h  mesh.frag.glsl  mesh.h  mesh.vert.glsl  meshfvf.vert.glsl  meshlet.mesh.glsl  meshlet.task.glsl  shade.comp.glsl  shadow.comp.glsl  shadowblur.comp.glsl  shadowfill.comp.glsl  tasksubmit.comp.glsl  triangle.frag.glsl  triangle.frag.spv  triangle.vert.glsl  triangle.vert.spv
